Converted to maven multi-module project